# consentmanager

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/requirements/: dev.txt  prod.txt
backend/src/api/: auth.py  main.py  schemas.py
backend/src/api/routes/: admin.py  consent.py  rights.py
backend/src/config/: settings.py
backend/src/domain/: api_key.py  audit.py  consent.py  exceptions.py  notice.py  principal.py  purpose.py  rights.py  tenant.py  user.py  webhook.py
backend/src/infrastructure/: celery_app.py  seed.py  tasks.py
backend/src/infrastructure/database/: __init__.py  models.py  repositories.py  session.py  uow.py
backend/src/repositories/: interfaces.py
backend/src/services/: __init__.py  audit_service.py  consent_service.py  container.py  notice_service.py  rights_service.py  webhook_service.py
backend/tests/unit/: test_api_key.py  test_audit.py  test_audit_service.py  test_consent.py  test_consent_service.py  test_notice.py  test_purpose.py  test_rights.py  test_rights_service.py  test_tenant.py  test_user.py  test_webhook.py
docs/deploy/: aws.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: layout.tsx
frontend/app/app/analytics/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/features/: page.tsx
frontend/app/login/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/security/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: app-layout.tsx  app-sidebar.tsx  auth-guard.tsx
frontend/components/admin/: sidebar.tsx
frontend/lib/: api.ts
sdk/: package.json  rollup.config.js  tsconfig.json
sdk/src/: index.ts  react.tsx
(+17 files in other folders)
